# lapack-demo

./: .gitignore  CMakeLists.txt  Cargo.toml  Justfile  build.rs  wrapper.h  xmake.lua
.cargo/: config.toml
c-src/: add.c  qr.c
include/: demo.h  qr.h
src/: add.rs  bindings.rs  lib.rs  qr.rs
